web-oss-portal/rolling-update/web-oss-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-oss-portal
  namespace: openmsa    
  
  labels:
    app: web-oss-portal
    
   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-oss-portal
  template:
    metadata:
      
      labels:
        app: web-oss-portal


    spec:
      containers:
        - name: web-oss-portal
          image: oscka/web-oss-portal
          ports:
          - name: http
            containerPort: 8080
