web-oss-portal/rolling-update/web-oss-portal-svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-oss-portal-svc
  namespace: openmsa
spec:
  selector:
    app: web-oss-portal
  
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http
